--- a/makehuman/data/modifiers/measurement_sliders.json
+++ b/makehuman/data/modifiers/measurement_sliders.json
@@ -3,48 +3,48 @@
     "showMacroStats": true,
     "modifiers": {
       "Neck": [
-          {"mod": "measure/measure-neckcirc-decrease|increase", "label": "Neck circum"},
-          {"mod": "measure/measure-neckheight-decrease|increase", "label": "Neck height"}
+          {"mod": "measure/measure-neck-circ-decr|incr", "label": "Neck circum"},
+          {"mod": "measure/measure-neck-height-decr|incr", "label": "Neck height"}
         ],
 
       "Upper arm": [
-          {"mod": "measure/measure-upperarm-decrease|increase", "label": "Upper arm circum"},
-          {"mod": "measure/measure-upperarmlenght-decrease|increase", "label": "Upperarm length"}
+          {"mod": "measure/measure-upperarm-circ-decr|incr", "label": "Upper arm circum"},
+          {"mod": "measure/measure-upperarm-length-decr|incr", "label": "Upperarm length"}
         ],
 
       "Lower arm": [
-          {"mod": "measure/measure-lowerarmlenght-decrease|increase", "label": "Lowerarm length"},
-          {"mod": "measure/measure-wrist-decrease|increase", "label": "Wrist circum"}
+          {"mod": "measure/measure-lowerarm-length-decr|incr", "label": "Lowerarm length"},
+          {"mod": "measure/measure-wrist-circ-decr|incr", "label": "Wrist circum"}
         ],
 
       "Torso": [
-          {"mod": "measure/measure-frontchest-decrease|increase", "label": "Front chest dist"},
-          {"mod": "measure/measure-bust-decrease|increase", "label": "Bust circum"},
-          {"mod": "measure/measure-underbust-decrease|increase", "label": "Underbust circum"},
-          {"mod": "measure/measure-waist-decrease|increase", "label": "Waist circum"},
-          {"mod": "measure/measure-napetowaist-decrease|increase", "label": "Nape to waist"},
-          {"mod": "measure/measure-waisttohip-decrease|increase", "label": "Waist to hip"},
-          {"mod": "measure/measure-shoulder-decrease|increase", "label": "Shoulder dist"}
+          {"mod": "measure/measure-frontchest-dist-decr|incr", "label": "Front chest dist"},
+          {"mod": "measure/measure-bust-circ-decr|incr", "label": "Bust circum"},
+          {"mod": "measure/measure-underbust-circ-decr|incr", "label": "Underbust circum"},
+          {"mod": "measure/measure-waist-circ-decr|incr", "label": "Waist circum"},
+          {"mod": "measure/measure-napetowaist-dist-decr|incr", "label": "Nape to waist"},
+          {"mod": "measure/measure-waisttohip-dist-decr|incr", "label": "Waist to hip"},
+          {"mod": "measure/measure-shoulder-dist-decr|incr", "label": "Shoulder dist"}
         ],
 
       "Hips": [
-          {"mod": "measure/measure-hips-decrease|increase", "label": "Hips circum"}
+          {"mod": "measure/measure-hips-circ-decr|incr", "label": "Hips circum"}
         ],
 
       "Upper leg": [
-          {"mod": "measure/measure-upperlegheight-decrease|increase", "label": "Upperleg height"},
-          {"mod": "measure/measure-thighcirc-decrease|increase", "label": "Thigh circ."}          
+          {"mod": "measure/measure-upperleg-height-decr|incr", "label": "Upperleg height"},
+          {"mod": "measure/measure-thigh-circ-decr|incr", "label": "Thigh circ."}          
         ],
       "Knee": [          
-          {"mod": "measure/measure-kneecirc-decrease|increase", "label": "Knee circ."}
+          {"mod": "measure/measure-knee-circ-decr|incr", "label": "Knee circ."}
         ],
       "Lower leg": [
-          {"mod": "measure/measure-lowerlegheight-decrease|increase", "label": "Lowerleg height"},
-          {"mod": "measure/measure-calf-decrease|increase", "label": "Calf circum"}
+          {"mod": "measure/measure-lowerleg-height-decr|incr", "label": "Lowerleg height"},
+          {"mod": "measure/measure-calf-circ-decr|incr", "label": "Calf circum"}
         ],
 
       "Ankle": [
-          {"mod": "measure/measure-ankle-decrease|increase", "label": "Ankle circum"}
+          {"mod": "measure/measure-ankle-circ-decr|incr", "label": "Ankle circum"}
         ]
 
     }
