--- a/makehuman/data/modifiers/measurement_modifiers_desc.json
+++ b/makehuman/data/modifiers/measurement_modifiers_desc.json
@@ -1,22 +1,22 @@
 {
-    "measure/measure-neckheight-decrease|increase": "",
-    "measure/measure-waist-decrease|increase": "",
-    "measure/measure-wrist-decrease|increase": "",
-    "measure/measure-ankle-decrease|increase": "",
-    "measure/measure-shoulder-decrease|increase": "",
-    "measure/measure-upperlegheight-decrease|increase": "",
-    "measure/measure-bust-decrease|increase": "",
-    "measure/measure-kneecirc-decrease|increase": "",
-    "measure/measure-upperarm-decrease|increase": "",
-    "measure/measure-calf-decrease|increase": "",
-    "measure/measure-underbust-decrease|increase": "",
-    "measure/measure-upperarmlenght-decrease|increase": "",
-    "measure/measure-hips-decrease|increase": "",
-    "measure/measure-napetowaist-decrease|increase": "",
-    "measure/measure-frontchest-decrease|increase": "",
-    "measure/measure-neckcirc-decrease|increase": "",
-    "measure/measure-waisttohip-decrease|increase": "",
-    "measure/measure-lowerlegheight-decrease|increase": "",
-    "measure/measure-lowerarmlenght-decrease|increase": "",
-    "measure/measure-thighcirc-decrease|increase": ""
+    "measure/measure-neck-height-decr|incr": "",
+    "measure/measure-neck-circ-decr|incr": "",
+    "measure/measure-upperarm-circ-decr|incr": "",
+    "measure/measure-upperarm-length-decr|incr": "",
+    "measure/measure-lowerarm-length-decr|incr": "",
+    "measure/measure-wrist-circ-decr|incr": "",
+    "measure/measure-frontchest-dist-decr|incr": "",
+    "measure/measure-bust-circ-decr|incr": "",
+    "measure/measure-underbust-circ-decr|incr": "",
+    "measure/measure-waist-circ-decr|incr": "",
+    "measure/measure-napetowaist-dist-decr|incr": "",
+    "measure/measure-waisttohip-dist-decr|incr": "",
+    "measure/measure-shoulder-dist-decr|incr": "",
+    "measure/measure-hips-circ-decr|incr": "",
+    "measure/measure-upperleg-height-decr|incr": "",
+    "measure/measure-thigh-circ-decr|incr": "",
+    "measure/measure-lowerleg-height-decr|incr": "",
+    "measure/measure-calf-circ-decr|incr": "",
+    "measure/measure-knee-circ-decr|incr": "",
+    "measure/measure-ankle-circ-decr|incr": ""
 }
